fix message overflow disable fadeAnimation adjust temperature and humidity view

--- a/client/home.less
+++ b/client/home.less
@@ -11,8 +11,8 @@ html {
   font-family: Arial, 'Microsoft JhengHei';
 
   body {
-    overflow: hidden;
     margin: 0;
+    overflow-x: hidden;
 
     .bulletin {
       width: 1080px;
@@ -28,7 +28,7 @@ html {
         background-size: cover;
         background-repeat: no-repeat;
         transition: opacity 3s ease-out;
-        .filter(brightness(0.3));
+        .filter(brightness(0.5));
 
         &.onloaded {
           background-color: #000;
@@ -221,71 +221,40 @@ html {
             line-height: 60px;
           }
 
-          .subtitle, .content {
+          .subtitle, .temperature, .humidity {
             .flex(1);
             .flex-display();
             position: relative;
+            text-align: center;
             .flex-direction(column);
 
             .icon {
-              top: 20px;
-              width: 78px;
-              height: 78px;
-              position: absolute;
-              background-size: contain;
+              .flex(1);
+              background-size: 78px;
+              background-position: center 0;
+              background-repeat: no-repeat;
             }
 
-            .out {
-              padding: 135px 0 0;
-            }
-
-            .in {
-              padding: 40px 0;
-            }
-
-            .extra {
-              padding: 0 0 45px
+            span {
+              .flex(1);
             }
           }
 
           .subtitle {
             .icon {
-              right: 26px;
               background-image: url('material/location.png');
-            }
-            span {
-              text-align: right;
             }
           }
 
-          .content {
-            .fix {
-              margin-left: -25px;
+          .temperature {
+            .icon {
+              background-image: url('material/temperature.png');
+            }
+          }
 
-              .temperature, .humidity {
-                width: 100%;
-                height: 100%;
-                .flex-display();
-                position: absolute;
-                text-align: center;
-                .flex-direction(column);
-
-                .icon {
-                  margin-left: 85px;
-                }
-              }
-
-              .temperature {
-                .icon {
-                  background-image: url('material/temperature.png');
-                }
-              }
-
-              .humidity {
-                .icon {
-                  background-image: url('material/humidity.png');
-                }
-              }
+          .humidity {
+            .icon {
+              background-image: url('material/humidity.png');
             }
           }
         }
@@ -295,6 +264,7 @@ html {
         bottom: 0;
         color: #FFF;
         height: 761px;
+        overflow: hidden;
         position: absolute;
 
         .title {
